fixed testimonial text overflow

--- a/src/App.scss
+++ b/src/App.scss
@@ -234,9 +234,8 @@ a {
     .Desc {
       margin-top: 1.4rem;
       color: black;
-      height: 10.8rem;
+      height: 12rem;
       font-size: 1rem;
-      overflow: hidden;
     }
 
     .Blue {
